Fetching news from newsapi.org and displaying it in NewsActivity recyclerView.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">FactoryNewsReader</string>
+    <string name="MainLabel">Factory News</string>
 </resources>
